# grub-customizer

./: CMakeLists.txt  COPYING  README  changelog  config.h.in
debian/: changelog  control  copyright  rules  watch
debian/patches/: 01su-to-root.dpatch  02_gtkmm24.dpatch  03_libarchive_old.dpatch
misc/: grub-customizer.desktop  pkexec_policy.in
src/Controller/: AboutController.h  AboutControllerImpl.cpp  AboutControllerImpl.h  ControllerAbstract.cpp  ControllerAbstract.h  ControllerCollection.h  EntryEditController.h  EntryEditControllerImpl.cpp  EntryEditControllerImpl.h  EnvEditorController.h  EnvEditorControllerImpl.cpp  EnvEditorControllerImpl.h  ErrorController.h  ErrorControllerImpl.cpp  ErrorControllerImpl.h  InstallerController.h  InstallerControllerImpl.cpp  InstallerControllerImpl.h  MainController.h  MainControllerImpl.cpp  MainControllerImpl.h  SettingsController.h  SettingsControllerImpl.cpp  SettingsControllerImpl.h  ThemeController.h  ThemeControllerImpl.cpp  ThemeControllerImpl.h  ThreadController.h  TrashController.h  TrashControllerImpl.cpp  TrashControllerImpl.h
src/Controller/GLib/: ThreadController.cpp  ThreadController.h
src/Controller/Helper/: DeviceInfo.cpp  DeviceInfo.h
src/Controller/Trait/: ControllerAware.h  ThreadControllerAware.h
src/Mapper/: EntryName.h  EntryNameImpl.cpp  EntryNameImpl.h
src/Model/: DeviceDataList.cpp  DeviceDataList.h  DeviceDataListInterface.h  DeviceMap.cpp  DeviceMap.h  Entry.cpp  Entry.h  EntryPathBuilder.h  EntryPathBuilderImpl.cpp  EntryPathBuilderImpl.h  EntryPathFollower.h  Env.cpp  Env.h  FbResolutionsGetter.cpp  FbResolutionsGetter.h  Installer.cpp  Installer.h  ListCfg.cpp  ListCfg.h  MountTable.cpp  MountTable.h  Proxy.cpp  Proxy.h  ProxyScriptData.cpp  ProxyScriptData.h  Proxylist.cpp  Proxylist.h  PscriptnameTranslator.cpp  PscriptnameTranslator.h  Repository.cpp  Repository.h  Rule.cpp  Rule.h  Script.cpp  Script.h  ScriptSourceMap.cpp  ScriptSourceMap.h  SettingsManagerData.cpp  SettingsManagerData.h  SettingsStore.cpp  (+9 more)
src/View/: About.h  ColorChooser.h  EntryEditor.h  EnvEditor.h  Error.h  Installer.h  Main.h  Settings.h  Theme.h  Trash.h
src/View/Gtk/: About.cpp  About.h  EntryEditor.cpp  EntryEditor.h  EnvEditor.cpp  EnvEditor.h  Error.cpp  Error.h  Installer.cpp  Installer.h  Main.cpp  Main.h  Settings.cpp  Settings.h  Theme.cpp  Theme.h  Trash.cpp  Trash.h
src/View/Gtk/Element/: List.h  PartitionChooser.cpp  PartitionChooser.h
src/View/Model/: ListItem.h
src/View/Trait/: ViewAware.h
src/lib/: ArrayStructure.cpp  ArrayStructure.h  ContentParser.h  ContentParserFactory.h  Exception.cpp  Exception.h  FileSystem.cpp  FileSystem.h  Logger.h  Mutex.h  Type.h  assert.cpp  assert.h  csv.cpp  csv.h  md5.cpp  md5.h  regex.cpp  regex.h  str_replace.cpp  str_replace.h  trim.cpp  trim.h
src/lib/ContentParser/: Abstract.cpp  Abstract.h  Chainloader.cpp  Chainloader.h  FactoryImpl.cpp  FactoryImpl.h  Linux.cpp  Linux.h  LinuxIso.cpp  LinuxIso.h  Memtest.cpp  Memtest.h
src/lib/Logger/: Stream.cpp  Stream.h
src/lib/Mutex/: GLib.cpp  GLib.h
src/lib/Trait/: ActionLoggerAware.h  LoggerAware.h
src/main/: gtk-client.cpp  proxy.cpp
translation/: compile_all.sh  translation-ar.mo  translation-ar.po  translation-ast.mo  translation-ast.po  translation-bg.mo  translation-bg.po  translation-bs.mo  translation-bs.po  translation-ca.mo  translation-ca.po  translation-cs.mo  translation-cs.po  translation-cy.mo  translation-cy.po  translation-de.mo  translation-de.po  translation-el.mo  translation-el.po  translation-en_GB.mo  translation-en_GB.po  translation-es.mo  translation-es.po  translation-et.mo  translation-et.po  translation-eu.mo  translation-eu.po  translation-fi.mo  translation-fi.po  translation-fr.mo  translation-fr.po  translation-gl.mo  translation-gl.po  translation-hr.mo  translation-hr.po  translation-hu.mo  translation-hu.po  translation-it.mo  translation-it.po  translation-ja.mo  (+26 more)
